--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">BikeTrack</string>
+    <string name="username">Email</string>
+    <string name="password">Password</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
