--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="username">Email</string>
     <string name="password">Password</string>
     <string name="title_activity_maps">Map</string>
+    <string name="server_client_id">338672131062-f1rn3mid1ot6pd9ac54c2lrug6262j1i.apps.googleusercontent.com</string>
 </resources>
